# decentralized-lan-file-sharing

./: .gitignore  CMakeLists.txt  Decentralized_LAN_File_Sharing_Run_Commands.txt  LICENSE  README.md  testfile.txt
include/discovery/: peer.h
include/transfer/: protocol.h
src/: hasher.cpp  hasher.h  receiver.cpp  sender.cpp
src/discovery/: broadcaster.cpp  listener.cpp
